fixing home video to fit the layout on mobile

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -881,7 +881,7 @@ section.home {
           & video {
               height: 80vh;
               width: 85vw;
-              padding: 40px;
+              padding: 50px 30px 40px 30px;
             object-fit: cover;
           }
       }
